#79535 popup translations on all controls and some bug fixes

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Licenses/Views/Licenses/License.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Licenses/Views/Licenses/License.cshtml
@@ -22,7 +22,8 @@
               regionControlName: "#RegionId",
               departmentControlName: "#DepartmentId",
               refreshDepartmentUrl: '@Url.Content("~/Licenses/Licenses/GetJsonDepartmentsFor")',
-              fileUploadWhiteList: []
+            fileUploadWhiteList: [],
+            invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
         };
 
 
