--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
@@ -29,7 +29,8 @@
         $(document).ready(function () {
              var opt = {
                 twoAttacmentsMode: @(Model.EnableTwoAttachments.ToJavaScriptBool()),
-                fileUploadWhiteList: []
+                 fileUploadWhiteList: [],
+                 invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
             }
 
                 @if(Model.HasFileUploadWhiteList)
