--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Orders/Views/Shared/_OrderLayout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Orders/Views/Shared/_OrderLayout.cshtml
@@ -31,7 +31,8 @@
                 logSubtopic: '@Subtopic.Log',
                 fileNameSubtopic: '@Subtopic.FileName',
                 noMoreFilesText: '@Translation.GetForJS("Inga fler filer tillåts")',
-                fileUploadWhiteList: []
+                fileUploadWhiteList: [],
+                invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
             };
 
             @if(Model.FileUploadWhiteList != null)
