--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/NewFaq.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/NewFaq.cshtml
@@ -16,6 +16,7 @@
 
     window.parameters = (window.parameters == null ? {} : window.parameters);
     window.parameters.fileUploadWhiteList = [];
+    window.parameters.invalidFileExtensionText = '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))';
 
     @if (Model.FileUploadWhiteList != null)
     {
