--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/_InputProject.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/_InputProject.cshtml
@@ -136,7 +136,7 @@
         PluploadTranslation('@SessionFacade.CurrentLanguageId');
 
         var fileUploadWhiteList = parameters.fileUploadWhiteList;
-
+        var invalidFileExtensionText = parameters.invalidFileExtensionText;
         var isFileInWhiteList = function (filename, whiteList) {
             if (filename.indexOf('.') !== -1) {
                 var extension = filename.split('.').reverse()[0];
@@ -171,7 +171,7 @@
                         files.forEach(function (e) {
                             if (!isFileInWhiteList(e.name, whiteList)) {
                                 up.removeFile(e);
-                                alert(e.name + ' does not have a valid extension.'); // TODO: translate
+                                alert(e.name + ' ' + invalidFileExtensionText);
                             }
                         })
 
