--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
@@ -14,7 +14,8 @@
 
 <script type="text/javascript">
     window.appParameters = {
-        fileUploadWhiteList: []
+        fileUploadWhiteList: [],
+        invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
     };
 
     @if (Model.FileUploadWhiteList != null)
