--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/_InputProject.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/_InputProject.cshtml
@@ -139,7 +139,7 @@
         var invalidFileExtensionText = parameters.invalidFileExtensionText;
         var isFileInWhiteList = function (filename, whiteList) {
             if (filename.indexOf('.') !== -1) {
-                var extension = filename.split('.').reverse()[0];
+                var extension = filename.split('.').reverse()[0].toLowerCase();
                 if (whiteList.indexOf(extension) >= 0)
                     return true;
             }
