--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Licenses/Views/Licenses/License.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Licenses/Views/Licenses/License.cshtml
@@ -23,7 +23,7 @@
               departmentControlName: "#DepartmentId",
               refreshDepartmentUrl: '@Url.Content("~/Licenses/Licenses/GetJsonDepartmentsFor")',
             fileUploadWhiteList: [],
-            invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
+            invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
         };
 
 
