--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Orders/Views/Shared/_OrderLayout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Orders/Views/Shared/_OrderLayout.cshtml
@@ -32,7 +32,7 @@
                 fileNameSubtopic: '@Subtopic.FileName',
                 noMoreFilesText: '@Translation.GetForJS("Inga fler filer tillåts")',
                 fileUploadWhiteList: [],
-                invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
+                invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
             };
 
             @if(Model.FileUploadWhiteList != null)
