--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
@@ -30,7 +30,7 @@
              var opt = {
                 twoAttacmentsMode: @(Model.EnableTwoAttachments.ToJavaScriptBool()),
                  fileUploadWhiteList: [],
-                 invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
+                 invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
             }
 
                 @if(Model.HasFileUploadWhiteList)
