--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -53,7 +53,7 @@
             var opt = {
                 twoAttacmentsMode: @(Model.EnableTwoAttachments.ToJavaScriptBool()),
                 fileUploadWhiteList: [],
-                invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
+                invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
             }
 
                 @if(Model.HasFileUploadWhiteList)
