--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/New.cshtml
@@ -20,7 +20,7 @@
             registrationRejectValue: '@StepStatus.Rejected',
             analyzeRejectValue: '@StepStatus.Rejected',
             fileUploadWhiteList: [],
-            invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
+            invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
         };
 
         @if (Model.FileUploadWhiteList != null)
