--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_Input.cshtml
@@ -22,7 +22,7 @@
         downloadContractFileParamUrl: '@(!string.IsNullOrEmpty(Model.ContractFileKey) ? "id=" + Model.ContractFileKey + "&" : string.Empty)',
         deleteContractFileUrl: '@Url.Action("DeleteContractFile")',
         fileUploadWhiteList: [],
-        invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))'
+        invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
     };
 
     @if (Model.FileUploadWhiteList != null)
