--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/EditProject.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/EditProject.cshtml
@@ -84,7 +84,7 @@
 <script type="text/javascript">
     window.parameters = (window.parameters == null ? {} : window.parameters);
     window.parameters.fileUploadWhiteList = [];
-    window.parameters.invalidFileExtensionText = '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse."))';
+    window.parameters.invalidFileExtensionText = '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))';
 
         @if (Model.FileUploadWhiteList != null)
         {
