#79440 - Report - Solved in time - only Case Type grouping

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_JsReport.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_JsReport.cshtml
@@ -15,5 +15,10 @@
         window.dhHelpdesk.reports.numberOfCasesReport = numberOfCasesReport({
             dataUrl: '@Url.Action("GetNumberOfCasesData", "Services", new { area = "reports" })',
         });
+
+        window.dhHelpdesk.reports.solvedInTimeReport = solvedInTimeReport({
+            dataUrl: '@Url.Action("GetSolvedInTimeData", "Services", new { area = "reports" })',
+        });
+
     })
 </script>
