#80053  Workflowstep - button in the bottom

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseControlPanel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseControlPanel.cshtml
@@ -17,7 +17,7 @@
             </div>
 
             <div class="col-sm-1 input-group workflowStepsPanel" style="display: none">
-                <select name="steps@(prefix)" class="dropdown-group workflows-select">
+                <select name="steps" class="dropdown-group workflows-select">
                     @* options are populated from client via ajax request - see workflowStepsBehavior.js*@
                 </select>
                 <span class="input-group-btn">
