--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -25,16 +25,16 @@
 <div class="secnavs fixed">
     <div class="pull-left">
         <ul class="secnav">
-            <li>@Html.ActionLink(Translation.Get("Lägg till", Enums.TranslationSource.TextTranslation) + " " + Translation.Get("Användare", Enums.TranslationSource.TextTranslation), "new", null, new { @class = "btn" })
+            <li>@Html.ActionLink(Translation.Get("Lägg till") + " " + Translation.Get("Användare"), "new", null, new { @class = "btn" })
         </ul>
     </div>
 </div>
 <div class="content">
     <div class="container">
         <ul class="nav nav-tabs" id="myTab">
-            <li class="active"><a href="#fragment-1">@Translation.Get("Användare", Enums.TranslationSource.TextTranslation)</a></li>
-            <li><a href="#fragment-3">@Translation.Get("Inloggade användare", Enums.TranslationSource.TextTranslation)</a></li>
-            <li><a href="#fragment-2">@Translation.Get("Låsta ärenden", Enums.TranslationSource.TextTranslation)</a></li>
+            <li class="active"><a href="#fragment-1">@Translation.Get("Användare")</a></li>
+            <li><a href="#fragment-3">@Translation.Get("Inloggade användare")</a></li>
+            <li><a href="#fragment-2">@Translation.Get("Låsta ärenden")</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane tab-pane-border active" id="fragment-1">
